@@ -16,6 +16,8 @@
 {% endif -%}{# if frontend.api_parser_custom_proxy #}
 {% endif %}{# if frontend.api_parser_use_proxy #}
 
+# Configuration of frontend {{ frontend.name }}
+
 filebeat.inputs:
 # Create a 'fake' entry to have at least a working input
 - type: unix
